--- a/StyleSheets/Shared.css
+++ b/StyleSheets/Shared.css
@@ -17,6 +17,7 @@
 
 html {
   width: 100%;
+  max-width: 100vw;
   height: 100%;
   padding: 0;
   margin: 0;
